crates/swc_ecma_parser/tests/pat/errors/arrow-function-member-as-binding-identifier/input.js
({a: b.c })=>{};
([a.b])=>{};
(a.b)=>{};

(_, {a: b.c })=>{};
(_, [a.b])=>{};
(_, a.b)=>{};

(...a.b)=>{};
([...a.b])=>{};
({...a.b})=>{};
